# hwpjs

./: .clippy.toml  .gitignore  .mise.toml  .npmrc  .oxfmtrc.json  .pr-body-13.md  AGENTS.md  Cargo.toml  Cross.toml  HEARTBEAT.md  LICENSE  MEMORY.md  README.md  SOUL.md  agent.md  architecture.md  branch-summary.md  cfb.js  commit-rules.md  compound-engineering.local.md  folder-structure.md  hwpjs.css  hwpjs.js  lint-rules.md  oxlint.json  package.json  rustfmt.toml  tech-stack.md
.maestro/: app-launch.yaml  (+2 more)
crates/hwp-core/: Cargo.toml  README.md
crates/hwp-core/src/: cfb.rs  decompress.rs  error.rs  lib.rs  types.rs
crates/hwp-core/src/convert/: mod.rs  resources.rs  section.rs
crates/hwp-core/src/document/: constants.rs  distribution.rs  mod.rs  mod_test.rs  preview_image.rs  preview_image_test.rs  preview_text.rs  preview_text_test.rs  summary_information.rs  summary_information_test.rs  xml_template.rs  xml_template_test.rs
crates/hwp-core/src/snapshots/: aligns.json  aligns.md  charshape.json  charshape.md  charstyle.json  charstyle.md  document.md  example.json  example.md  facename.json  facename.md  facename2.json  facename2.md  footnote-endnote.json  footnote-endnote.md  full_document.json  headerfooter.json  headerfooter.md  hwpSummaryInformation.json  hwp_core__snapshot_tests__aligns_json.snap  hwp_core__snapshot_tests__aligns_markdown.snap  hwp_core__snapshot_tests__charshape_json.snap  hwp_core__snapshot_tests__charshape_markdown.snap  hwp_core__snapshot_tests__charstyle_json.snap  hwp_core__snapshot_tests__charstyle_markdown.snap  hwp_core__snapshot_tests__document_markdown.snap  hwp_core__snapshot_tests__example_json.snap  hwp_core__snapshot_tests__example_markdown.snap  hwp_core__snapshot_tests__facename2_json.snap  hwp_core__snapshot_tests__facename2_markdown.snap  hwp_core__snapshot_tests__facename_json.snap  hwp_core__snapshot_tests__facename_markdown.snap  hwp_core__snapshot_tests__footnote_endnote_json.snap  hwp_core__snapshot_tests__footnote_endnote_markdown.snap  hwp_core__snapshot_tests__full_document_json.snap  hwp_core__snapshot_tests__headerfooter_json.snap  hwp_core__snapshot_tests__headerfooter_markdown.snap  hwp_core__snapshot_tests__headerfooter_markdown.snap.new  hwp_core__snapshot_tests__hwpSummaryInformation_json.snap  hwp_core__snapshot_tests__hwpSummaryInformation_markdown.snap  (+114 more)
crates/hwp-core/src/viewer/: doc_utils.rs  markdown.rs  mod.rs
crates/hwp-core/tests/: cfb_tests.rs  common.rs  convert_test.rs  decompress_tests.rs  doc_viewer_compare_test.rs  fileheader_tests.rs  parser_tests.rs  pdf_export.rs  snapshot_tests.rs  viewer_conversion_test.rs
crates/hwpx-parser/: Cargo.toml
crates/hwpx-parser/src/: body.rs  error.rs  header.rs  lib.rs  ocf.rs  opf.rs  utils.rs
crates/hwpx-parser/tests/: parse_test.rs
(+1519 files in other folders)
