[workspace]
members = [
    "crates/*",
    "packages/hwpjs",
    "packages/hwpjs/crates/lib",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ohah <bookyoon173@gmail.com>"]
license = "MIT"

[workspace.dependencies]

[workspace.lints.clippy]
too_many_arguments = "allow"
only_used_in_recursion = "allow"
derivable_impls = "allow"
field_reassign_with_default = "allow"
needless_range_loop = "allow"
unnecessary_unwrap = "allow"
new_without_default = "allow"
module_inception = "allow"
vec_init_then_push = "allow"
clone_on_ref_ptr = "allow"
assertions_on_constants = "allow"
useless_vec = "allow"
non_snake_case = "allow"

[workspace.lints.rust]
dead_code = "allow"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
